# AssertWT

./: .readthedocs.yaml  README.md  assertwt.py  pyproject.toml  setup.py
.github/workflows/: codeql.yml  ossar.yml  pythonpublish.yml
docs/: conf.py  index.rst  make.bat  requirements.txt
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: assertwt.html  index.html
docs/_build/html/_sources/: index.rst.txt
